<resources>
    <string name="app_name">ScrolViewsYou4</string>
    <string name="books">Books</string>
    <string name="entertainment">Entertainment</string>
    <string name="technology">Technology</string>
    <string name="grammer">Grammer</string>
    <string name="news">News</string>
    <string name="podcasts">Podcasts</string>
    <string name="continue1">Continue</string>
    <string name="health">Health</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="pronounciation">Pronounciation</string>
    <string name="what_topics_do_you_love">What topics do you love?</string>
</resources>