<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="#0583EA"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/what_topics_do_you_love"
            android:textColor="@color/white"
            android:textSize="25sp"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#0583EA"
            android:src="@drawable/ic_baseline_arrow_back_24"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/books"
        android:background="@drawable/shape1"
        style="@style/customTextView"
        android:text="@string/books"
        android:textColor="@color/white" />
        <TextView
            android:id="@+id/podcasts"
            style="@style/customTextView"
            android:layout_below="@+id/health"
            android:layout_toRightOf="@+id/books"
            android:background="@drawable/shape2"
            android:text="@string/podcasts"
            android:textColor="#0583EA"/>
    <TextView
        android:id="@+id/news"
        style="@style/customTextView"
        android:layout_below="@+id/books"
        android:background="@drawable/shape2"
        android:text="@string/news"
        android:textColor="#0583EA" />
        <TextView
            android:id="@+id/business"
            style="@style/customTextView"
            android:layout_below="@+id/podcasts"
            android:layout_toRightOf="@+id/books"
            android:background="@drawable/shape2"
            android:text="@string/business"
            android:textColor="#0583EA"/>
    <TextView
        android:id="@+id/entertainment"
        style="@style/customTextView"
        android:layout_below="@+id/news"
        android:background="@drawable/shape2"
        android:text="@string/entertainment"
        android:textColor="#0583EA" />
        <TextView
            android:id="@+id/sports"
            style="@style/customTextView"
            android:layout_below="@+id/business"
            android:layout_toRightOf="@+id/books"
            android:background="@drawable/shape2"
            android:text="@string/sports"
            android:textColor="#0583EA"/>
    <TextView
        android:id="@+id/technology"
        style="@style/customTextView"
        android:layout_below="@+id/entertainment"
        android:background="@drawable/shape1"
        android:text="@string/technology"
        android:textColor="@color/white" />
        <TextView
            android:id="@+id/pronounciation"
            style="@style/customTextView"
            android:layout_below="@+id/sports"
            android:layout_toRightOf="@+id/books"
            android:background="@drawable/shape2"
            android:text="@string/pronounciation"
            android:textColor="#0583EA"/>
    <TextView
        android:id="@+id/grammer"
        style="@style/customTextView"
        android:layout_below="@+id/technology"
        android:background="@drawable/shape2"
        android:text="@string/grammer"
        android:textColor="#0583EA" />
        <TextView
            android:id="@+id/health"
            style="@style/customTextView"
            android:layout_toRightOf="@+id/books"
            android:background="@drawable/shape2"
            android:text="@string/health"
            android:textColor="#0583EA"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#0583EA"
            android:text="@string/continue1"
            android:textColor="@color/white"/>
    </RelativeLayout>

</LinearLayout>
